--- a/spring-travel/server/pom.xml
+++ b/spring-travel/server/pom.xml
@@ -15,10 +15,47 @@
         <org.aspectj-version>1.6.8</org.aspectj-version>
         <org.cloudfoundry-version>0.5.0-BUILD-SNAPSHOT</org.cloudfoundry-version>
         <org.slf4j-version>1.6.1</org.slf4j-version>
-        <org.springframework-version>3.1.0.M1</org.springframework-version>
+        <org.springframework-version>3.0.5.RELEASE</org.springframework-version><!--3.1.0.M1-->
         <spring.integration.version>2.0.4.RELEASE</spring.integration.version>
         <spring.integration.amqp.version>2.1.0.BUILD-SNAPSHOT</spring.integration.amqp.version>
     </properties>
+    <dependencyManagement>
+        <dependencies>
+
+
+
+                  <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${org.springframework-version}</version>
+            </dependency>
+
+                  <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jms</artifactId>
+                <version>${org.springframework-version}</version>
+            </dependency>
+
+
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>${org.springframework-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${org.springframework-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>${org.springframework-version}</version>
+            </dependency>
+        </dependencies>
+
+    </dependencyManagement>
     <dependencies>
 
         <!-- cloudfoundry
@@ -29,7 +66,33 @@
         </dependency>
 
             -->
+
+        <dependency>
+              <groupId>javax.activation</groupId>
+              <artifactId>activation</artifactId>
+              <version>1.1.1</version>
+        </dependency>
+
+        <dependency>
+              <groupId>javax.mail</groupId>
+              <artifactId>mail</artifactId>
+              <version>1.4.1</version>
+        </dependency>
+
+        <!-- Activemq-->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-core</artifactId>
+            <version>5.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-optional</artifactId>
+            <version>5.4.2</version>
+        </dependency>
+
         <!-- Spring -->
+
 
         <dependency>
             <groupId>org.springframework.integration</groupId>
@@ -40,11 +103,13 @@
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-jms</artifactId>
             <version>${spring.integration.version}</version>
+
         </dependency>
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-mail</artifactId>
             <version>${spring.integration.version}</version>
+
         </dependency>
 
         <dependency>
