--- a/spring-travel/server/src/main/resources/ds.standalone.properties
+++ b/spring-travel/server/src/main/resources/ds.standalone.properties
@@ -4,3 +4,15 @@ ds.user=sa
 ds.name=springtravelsql
 ds.url=jdbc:h2:tcp://localhost/~/travel
 ds.driverClassName=org.h2.Driver
+
+
+
+amqp.customer.queue=notifications
+amqp.customer.exchange=notifications
+#broker.url=localhost
+broker.username=guest
+broker.password=guest
+
+broker.url=tcp://localhost:61616
+
+notifications.confirmation.subject = Confirmation of your booking for
