updated the code

--- a/spring-travel/server/src/main/resources/ds.standalone.properties
+++ b/spring-travel/server/src/main/resources/ds.standalone.properties
@@ -15,4 +15,12 @@ broker.password=guest
 
 broker.url=tcp://localhost:61616
 
-notifications.confirmation.subject = Confirmation of your booking for
+notifications.confirmation.subject = Spring Travel - Booking Confirmation
+
+notifications.email.from = notifications@springtravel.org
+notifications.email.password=12345
+notifications.email.username=notifications
+notifications.email.protocol=smtp
+notifications.email.host=localhost
+notifications.email.port=25
+
