--- a/spring-travel/server/pom.xml
+++ b/spring-travel/server/pom.xml
@@ -22,6 +22,16 @@
     <dependencyManagement>
         <dependencies>
 
+              	<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+
+		</dependency>
+
+        <dependency>
+            <groupId>commons-lang</groupId><artifactId>commons-lang</artifactId><version>2.5</version>
+		</dependency>
 
 
                   <dependency>
