moved to rabbitmq entirely.

--- a/spring-travel/server/src/main/resources/ds.standalone.properties
+++ b/spring-travel/server/src/main/resources/ds.standalone.properties
@@ -7,13 +7,15 @@ ds.driverClassName=org.h2.Driver
 
 
 
-amqp.customer.queue=notifications
-amqp.customer.exchange=notifications
+amqp.notification.queue=notifications
+amqp.notification.exchange=notifications
+
 #broker.url=localhost
 broker.username=guest
 broker.password=guest
 
-broker.url=tcp://localhost:61616
+#broker.url=tcp://localhost:61616
+broker.url=localhost
 
 notifications.confirmation.subject = Spring Travel - Booking Confirmation
 
