--- a/spring-travel/server/pom.xml
+++ b/spring-travel/server/pom.xml
@@ -15,39 +15,34 @@
         <org.aspectj-version>1.6.8</org.aspectj-version>
         <org.cloudfoundry-version>0.5.0-BUILD-SNAPSHOT</org.cloudfoundry-version>
         <org.slf4j-version>1.6.1</org.slf4j-version>
-        <org.springframework-version>3.0.5.RELEASE</org.springframework-version><!--3.1.0.M1-->
+        <org.springframework-version>3.0.5.RELEASE</org.springframework-version>
+        <!--3.1.0.M1-->
         <spring.integration.version>2.0.4.RELEASE</spring.integration.version>
         <spring.integration.amqp.version>2.1.0.BUILD-SNAPSHOT</spring.integration.amqp.version>
     </properties>
     <dependencyManagement>
         <dependencies>
 
-              	<dependency>
-			<groupId>org.apache.velocity</groupId>
-			<artifactId>velocity</artifactId>
-			<version>1.7</version>
-
-		</dependency>
-
-        <dependency>
-            <groupId>commons-lang</groupId><artifactId>commons-lang</artifactId><version>2.5</version>
-		</dependency>
-
-
-                  <dependency>
+            <dependency>
+                <groupId>org.apache.velocity</groupId>
+                <artifactId>velocity</artifactId>
+                <version>1.7</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.5</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
                 <version>${org.springframework-version}</version>
             </dependency>
-
-                  <dependency>
+            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-jms</artifactId>
                 <version>${org.springframework-version}</version>
             </dependency>
-
-
-
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context-support</artifactId>
@@ -78,18 +73,18 @@
             -->
 
         <dependency>
-              <groupId>javax.activation</groupId>
-              <artifactId>activation</artifactId>
-              <version>1.1.1</version>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
         </dependency>
 
         <dependency>
-              <groupId>javax.mail</groupId>
-              <artifactId>mail</artifactId>
-              <version>1.4.1</version>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.1</version>
         </dependency>
 
-        <!-- Activemq-->
+        <!-- &lt;!&ndash; Activemq&ndash;&gt;
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-core</artifactId>
@@ -100,7 +95,7 @@
             <artifactId>activemq-optional</artifactId>
             <version>5.4.2</version>
         </dependency>
-
+-->
         <!-- Spring -->
 
 
