--- a/spring-travel/server/pom.xml
+++ b/spring-travel/server/pom.xml
@@ -343,7 +343,11 @@
             <version>1.0.2</version>
 
         </dependency>
-
+             <dependency>
+                <groupId>org.apache.velocity</groupId>
+                <artifactId>velocity</artifactId>
+                <version>1.7</version>
+            </dependency>
         <!-- Test -->
         <dependency>
             <groupId>org.easymock</groupId>
