--- a/spring-travel/server/pom.xml
+++ b/spring-travel/server/pom.xml
@@ -15,7 +15,9 @@
         <org.aspectj-version>1.6.8</org.aspectj-version>
         <org.cloudfoundry-version>0.5.0-BUILD-SNAPSHOT</org.cloudfoundry-version>
         <org.slf4j-version>1.6.1</org.slf4j-version>
-        <org.springframework-version>3.0.5.RELEASE</org.springframework-version>
+        <!--<org.springframework-version>3.1.0.M2</org.springframework-version>-->
+        <org.springframework-version>3.1.0.M2</org.springframework-version>
+        <!--<org.springframework-version>3.0.5.RELEASE</org.springframework-version>-->
         <!--3.1.0.M1-->
         <spring.integration.version>2.0.4.RELEASE</spring.integration.version>
         <spring.integration.amqp.version>2.1.0.BUILD-SNAPSHOT</spring.integration.amqp.version>
