--- a/spring-travel/server/pom.xml
+++ b/spring-travel/server/pom.xml
@@ -24,7 +24,11 @@
     </properties>
     <dependencyManagement>
         <dependencies>
-
+            <dependency>
+                <groupId>org.springframework.data.gemfire</groupId>
+                <artifactId>spring-gemfire</artifactId>
+                <version>1.0.1.RELEASE</version>
+            </dependency>
             <dependency>
                 <groupId>org.apache.velocity</groupId>
                 <artifactId>velocity</artifactId>
@@ -100,7 +104,12 @@
 -->
         <!-- Spring -->
 
+        <!-- gemfire -->
+        <dependency>
+            <groupId>org.springframework.data.gemfire</groupId>
+            <artifactId>spring-gemfire</artifactId>
 
+        </dependency>
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-core</artifactId>
@@ -345,11 +354,11 @@
             <version>1.0.2</version>
 
         </dependency>
-             <dependency>
-                <groupId>org.apache.velocity</groupId>
-                <artifactId>velocity</artifactId>
-                <version>1.7</version>
-            </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
         <!-- Test -->
         <dependency>
             <groupId>org.easymock</groupId>
