--- a/spring-travel/server/src/main/webapp/WEB-INF/web.xml
+++ b/spring-travel/server/src/main/webapp/WEB-INF/web.xml
@@ -3,16 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
+    <!--<context-param>-->
+        <!--<param-name>contextClass</param-name>-->
+        <!--<param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>-->
+    <!--</context-param>-->
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:/META-INF/spring/travel/services-context.xml</param-value>
+        <param-value>classpath:/META-INF/spring/services-context.xml</param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
-    <filter>
+  <!--  <filter>
         <filter-name>httpMethodFilter</filter-name>
         <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
     </filter>
@@ -20,10 +24,9 @@
     <filter-mapping>
         <filter-name>httpMethodFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
 
-    <!-- Secures the application -->
-   <filter>
+ <!--   <filter>
         <filter-name>springSecurity</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
         <init-param>
@@ -34,17 +37,19 @@
     <filter-mapping>
         <filter-name>springSecurity</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
 
     <servlet>
         <servlet-name>travel</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>
-                classpath:/META-INF/spring/travel/ws-context.xml,classpath:/META-INF/spring/travel/servlet-context.xml
-            </param-value>
+            <param-value>classpath:/META-INF/spring/servlet-context.xml</param-value>
         </init-param>
+       <!-- <init-param>
+            <param-name>contextClass</param-name>
+            <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+        </init-param>-->
         <load-on-startup>1</load-on-startup>
     </servlet>
 
