--- a/spring-travel/server/src/main/webapp/WEB-INF/web.xml
+++ b/spring-travel/server/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
-  <!--  <filter>
+    <filter>
         <filter-name>httpMethodFilter</filter-name>
         <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
     </filter>
@@ -24,9 +24,11 @@
     <filter-mapping>
         <filter-name>httpMethodFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>-->
+    </filter-mapping>
 
- <!--   <filter>
+
+
+    <filter>
         <filter-name>springSecurity</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
         <init-param>
@@ -37,7 +39,8 @@
     <filter-mapping>
         <filter-name>springSecurity</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>-->
+    </filter-mapping>
+
 
     <servlet>
         <servlet-name>travel</servlet-name>
