--- a/spring-travel/server/src/main/resources/log4j.properties
+++ b/spring-travel/server/src/main/resources/log4j.properties
@@ -8,3 +8,5 @@ log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
 log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.R=org.apache.log4j.RollingFileAppender
+
+log4j.logger.org.springframework.amqp.rabbit.listener=INFO
